# swayconf

./: .licensure.yml  Cargo.toml  README.md
samples/: config.toml
src/: main.rs
src/sway/: commands.rs  config.rs  criteria.rs  mod.rs  options.rs  runtime.rs  toml.rs
src/sway/autogen/: mod.rs
src/sway/legacy/: commands.rs  config.rs  mod.rs  options.rs
src/sway/options/: bind.rs  bindsym.rs  client.rs  exec.rs  focus.rs  layout.rs  mod.rs  mov.rs  resize.rs
src/toml/: core.rs  mod.rs
src/tomlcfg/: base.rs  cfgfile.rs  config.rs  core.rs  mappings.rs  mod.rs  options.rs  runtime.rs
src/tomlcfg/legacy/: base.rs  cfgfile.rs  config.rs  mod.rs  options.rs  runtime.rs
