#     Copyright (C) 2024  Dustin Thomas <io@cptlobster.dev>
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
#
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.
[package]
name = "swayconf"
version = "0.1.0"
description = "Configuration generator for the Sway window manager"
authors = ["Dustin Thomas <io@cptlobster.dev>"]

license = "GPL-3"
license-file = "LICENSE.md"

edition = "2021"

[dependencies]
# configuration file parsing and generation
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
strum = {  version = "0.26.3", features = ["derive"] }
# subenum (used to differentiate runtime and config arguments)
subenum = "1.1.2"
# homedir (used for getting the user's homedir for default config file placement)
homedir = "0.3.4"
# logging and error handling
thiserror = "2.0.11"
env_logger = "0.11.6"
log = "0.4.25"
